--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
 native-tls = "0.2"
 tokio-native-tls = "0.3"
+log = "0.4.22"
+clap = { version = "4.5.20", features = ["derive"] }
